--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,9 +1,6 @@
 <h1>Articles</h1>
-<div class="articles">
-  <% @articles.each do |a| %>
-  <div class="article" id="article-<%= a.id %>">
-    <h2><%= a.title %></h2>
-    <p><%= a.body %></p>
-  </div>
-  <% end %>
+<div id="articles">
+  <%= render :partial => @articles %>
 </div>
+
+<%= will_paginate @articles, :renderer => FlowPagination::LinkRenderer -%>
