index pages fixed - twitter-like pager added

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,4 +3,4 @@
   <%= render :partial => @articles %>
 </div>
 
-<%= will_paginate @articles, :renderer => FlowPagination::LinkRenderer -%>
+<%= will_paginate :renderer => FlowPagination::LinkRenderer -%>
