--- a/app/views/articles/index.js.erb
+++ b/app/views/articles/index.js.erb
@@ -1,2 +1,2 @@
 $("#articles").append("<%= escape_javascript(render :partial => @articles) %>");
-$("#flow_pagination").html("<%= escape_javascript(will_paginate(@articles, :renderer => FlowPagination::LinkRenderer)) %>");
+$("#flow_pagination").replaceWith("<%= escape_javascript(will_paginate(:renderer => FlowPagination::LinkRenderer)) %>");
